--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest run --isolate",
+    "test:watch": "vitest --isolate",
+    "test:coverage": "vitest run --coverage --isolate",
     "db:migrations:apply": "wrangler d1 migrations apply DB --remote",
     "deploy-from-local": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "deploy": "npm run db:migrations:apply && npx opennextjs-cloudflare build && wrangler deploy",
@@ -17,30 +20,32 @@
     "@ant-design/nextjs-registry": "^1.3.0",
     "@auth/prisma-adapter": "^2.11.1",
     "@opennextjs/cloudflare": "^1.14.0",
-    "@prisma/adapter-d1": "^6.15.0",
-    "@prisma/client": "^6.15.0",
+    "@prisma/adapter-d1": "^6.19.0",
+    "@prisma/client": "^6.19.0",
     "antd": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "lodash": "^4.17.21",
-    "next": "15.5.7",
-    "next-auth": "^5.0.0-beta.29",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "luxon": "^3.7.2",
+    "next": "16.0.7",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.8.70",
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20.19.25",
+    "@types/luxon": "^3.7.1",
+    "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
-    "prisma": "^6.15.0",
-    "vitest": "~3.2.0",
+    "eslint-config-next": "^16.0.7",
+    "prisma": "^6.19.0",
     "typescript": "^5",
-    "wrangler": "^4.52.1"
+    "vitest": "~3.2.0",
+    "wrangler": "^4.53.0"
   },
   "cloudflare": {
     "bindings": {
