Added schema to prompts

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "all-test": "npm run test; npm run test:component",
     "test": "vitest run --isolate",
     "test:watch": "vitest --isolate",
     "test:coverage": "vitest run --coverage --isolate",
+    "test:component": "vitest run --config vitest.config.component.ts",
+    "test:component:watch": "vitest --config vitest.config.component.ts",
     "db:migrations:apply": "wrangler d1 migrations apply DB --remote",
     "deploy-from-local": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
     "deploy": "npm run db:migrations:apply && npx opennextjs-cloudflare build && wrangler deploy",
@@ -36,14 +39,21 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.8.70",
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/luxon": "^3.7.1",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9",
     "eslint-config-next": "^16.0.7",
+    "jsdom": "^27.2.0",
     "prisma": "^6.19.0",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "~3.2.0",
     "wrangler": "^4.53.0"
   },
